align ment fixed

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -82,21 +82,21 @@ body {
 .events-container,.publication-container,.event-detail-container {
     
     @media (min-width:776px) {
-        padding: 60px 180px;
+        padding: 60px 0px;
     }
     @media (max-width:776px) {
-        padding: 60px 120px;
+        padding: 60px 0px;
     }
     @media (max-width:576px) {
-        padding: 60px 20px;
+        padding: 60px 0px;
         .events-grid{
             justify-content: center;
         }
     }
     @media (max-width:440px) {
-        padding: 60px 10px;
+        padding: 60px 0px;
         .events-grid{
-            padding: 10px;
+            padding: 5px;
         }
     }
 }
@@ -128,11 +128,11 @@ body {
     width: 340px;
 }
 .events-grid, .publications-grid {
-    padding: 20px;
+    padding: 10px;
     display: flex;
     flex-wrap: wrap;
     gap: 26px;
-    // justify-content: center;
+    justify-content: center;
 }
 .event-card-title,.publication-card-title{
     font-size: 18px;
